Update the content of the index.html file

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1> Delicious recipes for toddlers</h1>
 
         <ul>
-            <li><a href="chicken-nuggets.html"> Chicken Nuggets and Sweet Potato</a> </li>
-            <li><a href="spaghetti-bolognese.html">Veggie loaded Spaghetti Bolognese</a> </li>
+            <li><a href="recipes/chicken-nuggets.html"> Chicken Nuggets and Sweet Potato</a> </li>
+            <li><a href="recipes/spaghetti-bolognese.html">Veggie loaded Spaghetti Bolognese</a> </li>
 
         </ul>
     </main>
